--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <nav
-          class="hidden lg:flex items-center space-x-10 text-sm font-bold text-black
+          class="flex items-center space-x-10 text-sm font-bold text-black
         >
           <a
             href="index.html"
