--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,14 +131,14 @@
       <div class="container mx-auto px-6">
         <div class="mb-20 text-center max-w-5xl mx-auto">
           <h2 class="text-4xl font-black text-blue-900 mb-6 uppercase">
-            Mishra Industries.ltd - Electrical Online Store in India!
+            Mishra Industries Ltd - Electrical Online Store in India!
           </h2>
           <p class="text-gray-600 text-lg leading-relaxed mb-6">
             Mishraindustries.ltd is India's best online electrical shopping
             store, supplying world-class electrical products to meet all
             industrial and residential purposes. We are the leading wide-variety
             of electrical product suppliers, dealers, and distributors in India,
-            serving B2B B2C customers.
+            serving B2B & B2C customers.
           </p>
           <p class="text-gray-600 text-lg leading-relaxed">
             Our E-Commerce portal aims to bridge the gap between buyers and
