--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -196,5 +196,6 @@
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/shop.js"></script>
+    <script src="js/products.js"></script>
 </body>
 </html>
