--- a/frontend/admin/site-editor.html
+++ b/frontend/admin/site-editor.html
@@ -125,7 +125,9 @@
       id="productModal"
       class="fixed inset-0 bg-slate-900/60 hidden items-center justify-center z-[100] backdrop-blur-md transition-all"
     >
-      <div class="bg-white w-full max-w-md rounded-3xl shadow-2xl p-6 animate__animated animate__zoomIn animate__faster">
+      <div
+        class="bg-white w-full max-w-md rounded-3xl shadow-2xl p-6 animate__animated animate__zoomIn animate__faster"
+      >
         <div class="flex justify-between items-center mb-8">
           <h2
             id="modalTitle"
@@ -252,7 +254,7 @@
             <div class="col-span-2">
               <label class="block text-sm font-bold text-slate-700 mb-2"
                 >Description</label
-               >
+              >
               <textarea
                 id="prodDesc"
                 placeholder="Technical specifications..."
@@ -272,7 +274,8 @@
       </div>
     </div>
     <script module>
-      const API_URL = "http://localhost:5000/api/products";
+      const API_URL =
+        "https://mishra-industries-ltd-yjfr.onrender.com/api/products";
       let isEditing = false;
       let currentEditId = null;
 
@@ -380,7 +383,7 @@
                     <tr class="group hover:bg-slate-50 transition">
                         <td class="p-6">
                             <div class="flex items-center space-x-4">
-                                <img src="http://localhost:5000${product.image}" onerror="this.src='../images/logo.jpeg'" class="w-14 h-14 object-cover rounded-xl border border-slate-100 shadow-sm">
+                                <img src="https://mishra-industries-ltd-yjfr.onrender.com${product.image}" onerror="this.src='../images/logo.jpeg'" class="w-14 h-14 object-cover rounded-xl border border-slate-100 shadow-sm">
                                 <span class="font-bold text-slate-700">${product.name}</span>
                             </div>
                         </td>
@@ -426,8 +429,9 @@
             document.getElementById("prodDesc").value = product.description;
 
             document.getElementById("imagePreview").src =
-              `http://localhost:5000${product.image}`;
-            document.getElementById("imagePreviewContainer")
+              `https://mishra-industries-ltd-yjfr.onrender.com${product.image}`;
+            document
+              .getElementById("imagePreviewContainer")
               .classList.remove("hidden");
             document.getElementById("uploadLabel").classList.add("hidden");
 
