--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -62,7 +62,7 @@
                 };
 
                 try {
-                    const response = await fetch('http://localhost:5000/api/orders/place', {
+                    const response = await fetch('https://mishra-industries-ltd-yjfr.onrender.com/api/orders/place', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(orderData)
