--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -9,25 +9,51 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
   </head>
-  <body class="bg-slate-50 flex">
+  <body class="bg-slate-50 flex min-h-screen font-sans">
     <aside
-      class="w-72 bg-slate-900 h-screen sticky top-0 text-white p-8 shadow-2xl"
+      class="w-72 bg-slate-900 sticky top-0 h-screen text-white p-8 shadow-2xl flex flex-col"
     >
-      <h2 class="text-2xl font-bold mb-10 tracking-tighter">
-        MISHRA <span class="text-orange-500">PRO</span>
-      </h2>
-      <nav class="space-y-2">
+      <div class="flex items-center space-x-3 mb-12">
+        <h2 class="text-2xl font-bold tracking-tighter">
+          MISHRA <span class="text-orange-500">INDUSTRIES</span>
+        </h2>
+      </div>
+
+      <nav ">
         <a
           href="site-editor.html"
-          class="block p-4 hover:bg-slate-800 rounded-xl transition text-slate-400"
-          ><i class="fas fa-layer-group mr-3"></i> Site Editor</a
+          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
         >
+          <i></i> <span>Site Editor</span>
+        </a>
         <a
-          href="#"
-          class="block p-4 bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
-          ><i class="fas fa-shopping-bag mr-3"></i> Orders</a
+          href="stock-dashboard.html"
+          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
         >
+          <i></i> <span>Inventory</span>
+        </a>
+        <a
+          href="users.html"
+          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
+        >
+        
+          <i></i> <span>User Management</span>
+        </a>
+        <a
+          href="orders.html"
+          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
+        >
+        
+          <i></i> <span>Orders</span>
+        </a>
       </nav>
+
+      <a
+        href="../index.html"
+        class="flex items-center space-x-3 p-3 text-slate-500 hover:text-red-400 transition border-t border-slate-800"
+      >
+        <i class="fas fa-sign-out-alt"></i> <span>Logout</span>
+      </a>
     </aside>
 
     <main class="flex-1 p-12">
