Image source update

--- a/frontend/admin/site-editor.html
+++ b/frontend/admin/site-editor.html
@@ -297,8 +297,7 @@
       </div>
     </div>
     <script module>
-      const API_URL =
-        "https://mishra-industries-ltd-yjfr.onrender.com/api/products";
+      const API_URL ="https://mishra-industries-ltd-yjfr.onrender.com/api/products";
       let isEditing = false;
       let currentEditId = null;
 
