--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Admin | Order Management</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Order Management | Mishra Industries Admin</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -11,77 +16,123 @@
   </head>
   <body class="bg-slate-50 flex min-h-screen font-sans">
     <aside
-      class="w-72 bg-slate-900 sticky top-0 h-screen text-white p-8 shadow-2xl flex flex-col"
+      class="w-72 bg-slate-900 sticky top-0 h-screen text-white p-8 shadow-2xl flex flex-col z-50"
     >
       <div class="flex items-center space-x-3 mb-12">
-        <h2 class="text-2xl font-bold tracking-tighter">
-          MISHRA <span class="text-orange-500">INDUSTRIES</span>
+        <div
+          class="w-10 h-10 bg-orange-500 rounded-xl flex items-center justify-center"
+        >
+          <i class="fas fa-bolt text-white"></i>
+        </div>
+        <h2 class="text-xl font-black tracking-tighter uppercase">
+          Mishra <span class="text-orange-500">Industries</span>
         </h2>
       </div>
 
-      <nav ">
+      <nav class="space-y-3 flex-1">
         <a
           href="site-editor.html"
-          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
+          class="flex items-center space-x-4 p-4 hover:bg-white/5 rounded-2xl transition-all group"
         >
-          <i></i> <span>Site Editor</span>
+          <i
+            class="fas fa-layer-group text-slate-500 group-hover:text-orange-500"
+          ></i>
+          <span
+            class="font-bold text-sm tracking-wide text-slate-400 group-hover:text-white"
+            >Site Editor</span
+          >
         </a>
         <a
           href="stock-dashboard.html"
-          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
+          class="flex items-center space-x-4 p-4 hover:bg-white/5 rounded-2xl transition-all group"
         >
-          <i></i> <span>Inventory</span>
+          <i
+            class="fas fa-boxes text-slate-500 group-hover:text-orange-500"
+          ></i>
+          <span
+            class="font-bold text-sm tracking-wide text-slate-400 group-hover:text-white"
+            >Inventory</span
+          >
         </a>
         <a
           href="users.html"
-          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
+          class="flex items-center space-x-4 p-4 hover:bg-white/5 rounded-2xl transition-all group"
         >
-        
-          <i></i> <span>User Management</span>
+          <i
+            class="fas fa-users text-slate-500 group-hover:text-orange-500"
+          ></i>
+          <span
+            class="font-bold text-sm tracking-wide text-slate-400 group-hover:text-white"
+            >Users</span
+          >
         </a>
         <a
           href="orders.html"
-          class="flex items-center space-x-3 p-3 hover:bg-orange-500/10 text-orange-500 rounded-xl font-bold transition"
+          class="flex items-center space-x-4 p-4 hover:bg-white/5 rounded-2xl transition-all group"
         >
-        
-          <i></i> <span>Orders</span>
+          <i class="fas fa-shopping-cart"></i>
+          <span class="font-bold text-sm tracking-wide">Orders List</span>
         </a>
       </nav>
 
       <a
         href="../index.html"
-        class="flex items-center space-x-3 p-3 text-slate-500 hover:text-red-400 transition border-t border-slate-800"
+        class="flex items-center space-x-4 p-4 text-slate-500 hover:text-red-400 transition-all border-t border-slate-800"
       >
-        <i class="fas fa-sign-out-alt"></i> <span>Logout</span>
+        <i class="fas fa-sign-out-alt"></i>
+        <span class="font-bold text-sm">Logout Console</span>
       </a>
     </aside>
 
     <main class="flex-1 p-12">
-      <h1 class="text-3xl font-black text-slate-800 mb-8">Customer Orders</h1>
+      <header class="flex justify-between items-end mb-12">
+        <div>
+          <h1
+            class="text-5xl font-black text-slate-900 tracking-tighter uppercase"
+          >
+            Fulfillment
+          </h1>
+          <p
+            class="text-slate-400 font-bold text-xs mt-2 uppercase tracking-[0.3em]"
+          >
+            Live Order Stream from Mishra Atlas
+          </p>
+        </div>
+        <div class="flex space-x-4">
+          <div class="relative">
+            <i
+              class="fas fa-search absolute left-4 top-1/2 -translate-y-1/2 text-slate-400 text-xs"
+            ></i>
+            <input
+              type="text"
+              id="orderSearch"
+              placeholder="Search by name or ID..."
+              oninput="filterOrders()"
+              class="bg-white border-none shadow-sm pl-12 pr-6 py-4 rounded-2xl text-xs font-bold w-64 focus:ring-2 focus:ring-orange-500 transition-all"
+            />
+          </div>
+          <button
+            onclick="loadOrders()"
+            class="bg-white p-4 rounded-2xl shadow-sm hover:text-orange-500 transition-all border border-slate-100"
+          >
+            <i class="fas fa-sync-alt"></i>
+          </button>
+        </div>
+      </header>
 
       <div
-        class="bg-white rounded-3xl shadow-sm border border-slate-200 overflow-hidden"
+        class="bg-white rounded-[2.5rem] shadow-2xl shadow-slate-200/50 border border-slate-100 overflow-hidden animate__animated animate__fadeIn"
       >
         <table class="w-full text-left">
-          <thead class="bg-slate-50 border-b">
-            <tr>
-              <th class="p-6 text-[10px] font-black text-slate-400 uppercase">
-                Customer
-              </th>
-              <th class="p-6 text-[10px] font-black text-slate-400 uppercase">
-                Items
-              </th>
-              <th class="p-6 text-[10px] font-black text-slate-400 uppercase">
-                Total
-              </th>
-              <th class="p-6 text-[10px] font-black text-slate-400 uppercase">
-                Status
-              </th>
-              <th
-                class="p-6 text-[10px] font-black text-slate-400 uppercase text-right"
-              >
-                Action
-              </th>
+          <thead class="bg-slate-50/50 border-b border-slate-100">
+            <tr
+              class="text-[10px] font-black text-slate-400 uppercase tracking-widest"
+            >
+              <th class="p-8">Reference / Customer</th>
+              <th class="p-8">Manifest Details</th>
+              <th class="p-8">Billing (Incl. GST)</th>
+              <th class="p-8">Workflow Status</th>
+              <th class="p-8 text-right">Operations</th>
             </tr>
           </thead>
           <tbody id="orderTableBody" class="divide-y divide-slate-50"></tbody>
@@ -90,54 +141,89 @@
     </main>
 
     <script>
+      const API_BASE =
+        "https://mishra-industries-ltd-yjfr.onrender.com/api/orders";
+      let allOrders = [];
+
       async function loadOrders() {
+        const table = document.getElementById("orderTableBody");
+        table.innerHTML = `<tr><td colspan="5" class="p-20 text-center"><i class="fas fa-circle-notch fa-spin text-orange-500 text-3xl"></i></td></tr>`;
+
         try {
-          const response = await fetch(
-            "https://mishra-industries-ltd-yjfr.onrender.com/api/orders/all",
-          );
-          const orders = await response.json();
-          const table = document.getElementById("orderTableBody");
-          table.innerHTML = "";
-
-          orders.forEach((order) => {
-            const statusColor =
-              order.status === "Pending" ?
-                "bg-orange-100 text-orange-600"
-              : "bg-green-100 text-green-600";
-
-            table.innerHTML += `
-                        <tr class="hover:bg-slate-50 transition">
-                            <td class="p-6">
-                                <p class="font-bold text-slate-800">${order.customerName}</p>
-                                <p class="text-[10px] text-slate-400">${order.phone}</p>
-                            </td>
-                            <td class="p-6 text-sm text-slate-500">
-                                ${order.items.map((i) => `${i.name} (x1)`).join(", ")}
-                            </td>
-                            <td class="p-6 font-black text-blue-900">₹${order.totalAmount.toLocaleString()}</td>
-                            <td class="p-6">
-                                <span class="${statusColor} text-[10px] font-black px-3 py-1 rounded-full uppercase">${order.status}</span>
-                            </td>
-                            <td class="p-6 text-right">
-                                <button onclick="updateStatus('${order._id}', 'Shipped')" class="text-blue-600 hover:underline text-xs font-bold">Mark Shipped</button>
-                            </td>
-                        </tr>`;
-          });
+          const response = await fetch(`${API_BASE}/all`);
+          allOrders = await response.json();
+          renderOrders(allOrders);
         } catch (err) {
-          console.error(err);
+          console.error("Order Fetch Failed:", err);
+          table.innerHTML = `<tr><td colspan="5" class="p-20 text-center text-red-500 font-bold">Atlas Connection Offline</td></tr>`;
         }
       }
 
+      function renderOrders(orders) {
+        const table = document.getElementById("orderTableBody");
+        table.innerHTML = "";
+
+        orders.reverse().forEach((order, index) => {
+          const statusMap = {
+            Pending: "bg-orange-100 text-orange-600 border-orange-200",
+            Shipped: "bg-blue-100 text-blue-600 border-blue-200",
+            Delivered: "bg-green-100 text-green-600 border-green-200",
+          };
+
+          const currentStatusClass =
+            statusMap[order.status] || statusMap["Pending"];
+
+          table.innerHTML += `
+                    <tr class="hover:bg-slate-50/80 transition-all group animate__animated animate__fadeInUp" style="animation-delay: ${index * 0.05}s">
+                        <td class="p-8">
+                            <p class="text-[10px] font-black text-slate-300 mb-1">#MI-${order._id.slice(-6).toUpperCase()}</p>
+                            <p class="font-black text-slate-800 uppercase tracking-tight">${order.customerName}</p>
+                            <p class="text-[10px] font-bold text-slate-400 mt-1"><i class="fas fa-phone-alt mr-1"></i> ${order.phone}</p>
+                        </td>
+                        <td class="p-8">
+                            <div class="max-w-xs">
+                                <p class="text-xs font-bold text-slate-600 leading-relaxed truncate">${order.items.map((i) => i.name).join(", ")}</p>
+                                <p class="text-[9px] text-slate-400 mt-2 font-medium italic"><i class="fas fa-map-marker-alt mr-1"></i> ${order.address}</p>
+                            </div>
+                        </td>
+                        <td class="p-8">
+                            <p class="font-black text-xl text-blue-900 tracking-tighter">₹${order.totalAmount.toLocaleString()}</p>
+                            <p class="text-[9px] font-black text-green-500 uppercase">GST 18% Cleared</p>
+                        </td>
+                        <td class="p-8">
+                            <span class="${currentStatusClass} border text-[9px] font-black px-4 py-2 rounded-xl uppercase tracking-widest shadow-sm">${order.status || "Pending"}</span>
+                        </td>
+                        <td class="p-8 text-right">
+                            <div class="flex justify-end space-x-2">
+                                <button onclick="updateStatus('${order._id}', 'Shipped')" class="bg-blue-900 text-white px-4 py-2 rounded-xl text-[9px] font-black uppercase tracking-widest hover:bg-orange-500 transition-all shadow-lg shadow-blue-900/10">Ship</button>
+                                <button onclick="updateStatus('${order._id}', 'Delivered')" class="bg-slate-100 text-slate-600 px-4 py-2 rounded-xl text-[9px] font-black uppercase tracking-widest hover:bg-green-500 hover:text-white transition-all">Done</button>
+                            </div>
+                        </td>
+                    </tr>`;
+        });
+      }
+
       async function updateStatus(id, newStatus) {
-        await fetch(
-          `https://mishra-industries-ltd-yjfr.onrender.com/api/orders/status/${id}`,
-          {
+        try {
+          const response = await fetch(`${API_BASE}/status/${id}`, {
             method: "PUT",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ status: newStatus }),
-          },
+          });
+          if (response.ok) loadOrders();
+        } catch (err) {
+          alert("Status Update Failed");
+        }
+      }
+
+      function filterOrders() {
+        const term = document.getElementById("orderSearch").value.toLowerCase();
+        const filtered = allOrders.filter(
+          (o) =>
+            o.customerName.toLowerCase().includes(term) ||
+            o._id.toLowerCase().includes(term),
         );
-        loadOrders();
+        renderOrders(filtered);
       }
 
       document.addEventListener("DOMContentLoaded", loadOrders);
