--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -3,68 +3,176 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Cart | Mishra Industries Limited</title>
+    <title>Premium Cart | Mishra Industries Limited</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
+      body {
+        font-family: "Inter", sans-serif;
+      }
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 6px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: #cbd5e1;
+        border-radius: 10px;
+      }
+      .step-active {
+        color: #f97316;
+      }
+    </style>
   </head>
-  <body class="bg-gray-50 min-h-screen">
-    <nav class="bg-white shadow-sm p-4 mb-10">
+  <body class="bg-[#f8fafc] min-h-screen">
+    <nav
+      class="bg-white/90 backdrop-blur-xl sticky top-0 z-50 border-b border-slate-200/60 p-5"
+    >
       <div class="container mx-auto flex justify-between items-center">
         <h1
-          class="text-2xl font-bold text-blue-900"
+          class="text-2xl font-black text-blue-900 tracking-tighter cursor-pointer"
           onclick="location.href = 'index.html'"
-          style="cursor: pointer"
         >
-          MISHRA <span class="text-orange-500">IND.</span>
+          MISHRA <span class="text-orange-500">INDUSTRIES</span>
         </h1>
-        <a href="shop.html" class="text-blue-600 font-bold hover:underline"
-          >← Continue Shopping</a
+
+        <div
+          class="hidden md:flex items-center space-x-8 text-[10px] font-black uppercase tracking-widest"
         >
+          <div class="flex items-center text-orange-500">
+            <span
+              class="w-6 h-6 rounded-full border-2 border-orange-500 flex items-center justify-center mr-2"
+              >1</span
+            >
+            Cart
+          </div>
+          <div class="flex items-center text-slate-300">
+            <span
+              class="w-6 h-6 rounded-full border-2 border-slate-200 flex items-center justify-center mr-2"
+              >2</span
+            >
+            Checkout
+          </div>
+          <div class="flex items-center text-slate-300">
+            <span
+              class="w-6 h-6 rounded-full border-2 border-slate-200 flex items-center justify-center mr-2"
+              >3</span
+            >
+            Payment
+          </div>
+        </div>
+
+        <a
+          href="shop.html"
+          class="text-[10px] font-black uppercase tracking-[0.2em] text-slate-400 hover:text-orange-500 transition-all flex items-center"
+        >
+          <i class="fas fa-arrow-left mr-2"></i> Shop more
+        </a>
       </div>
     </nav>
 
-    <div class="container mx-auto px-6">
-      <h2 class="text-3xl font-black text-gray-800 mb-8">Shopping Cart</h2>
-
-      <div class="flex flex-col lg:flex-row gap-10">
+    <div class="container mx-auto px-6 py-12">
+      <div class="flex flex-col lg:flex-row gap-12">
         <div class="flex-1">
+          <div class="flex items-end justify-between mb-10">
+            <h2
+              class="text-5xl font-black text-blue-900 uppercase tracking-tighter"
+            >
+              Your Basket
+            </h2>
+            <p
+              id="itemCountDisplay"
+              class="text-slate-400 font-bold text-sm mb-1 uppercase tracking-widest"
+            >
+              0 Items
+            </p>
+          </div>
+
           <div
             id="fullCartList"
-            class="bg-white rounded-2xl shadow-sm border border-gray-100 p-6 space-y-6"
+            class="space-y-6 custom-scrollbar max-h-[70vh] overflow-y-auto pr-4"
           ></div>
         </div>
 
-        <div class="lg:w-1/3">
+        <div class="lg:w-[450px]">
           <div
-            class="bg-white rounded-2xl shadow-lg border border-gray-100 p-8 sticky top-24"
+            class="bg-white rounded-[3rem] shadow-2xl shadow-blue-900/5 border border-slate-100 p-10 sticky top-32 animate__animated animate__fadeInRight"
           >
-            <h3 class="text-xl font-bold mb-6 border-b pb-4">Order Summary</h3>
-            <div class="flex justify-between mb-4 font-medium text-gray-600">
-              <span>Subtotal</span>
-              <span id="subtotal">₹0.00</span>
-            </div>
-            <div class="flex justify-between mb-4 font-medium text-gray-600">
-              <span>Shipping</span>
-              <span class="text-green-600 font-bold">FREE</span>
-            </div>
-            <div class="flex justify-between mb-4 font-medium text-gray-600">
-              <span>GST</span>
-              <span class="text-green-600 font-bold">18%</span>
-            </div>
-            <div
-              class="flex justify-between text-2xl font-black text-blue-900 mt-6 pt-6 border-t"
+            <h3
+              class="text-xl font-black text-blue-900 mb-8 uppercase tracking-widest border-b border-slate-50 pb-6"
             >
-              <span>Total</span>
-              <span id="grandTotal">₹0.00</span>
+              Invoice Summary
+            </h3>
+
+            <div class="space-y-5">
+              <div
+                class="flex justify-between text-sm font-bold text-slate-400"
+              >
+                <span>Gross Value</span>
+                <span id="originalValue" class="line-through">₹0.00</span>
+              </div>
+              <div
+                class="flex justify-between text-sm font-bold text-orange-500 bg-orange-50 p-3 rounded-2xl"
+              >
+                <span>Mishra Privilege Discount</span>
+                <span id="discountValue">-₹0.00</span>
+              </div>
+              <div
+                class="flex justify-between text-sm font-bold text-slate-600 px-1"
+              >
+                <span>Subtotal</span>
+                <span id="subtotal">₹0.00</span>
+              </div>
+              <div
+                class="flex justify-between text-sm font-bold text-slate-600 px-1"
+              >
+                <span>Standard Logistics</span>
+                <span class="text-green-600 font-black uppercase text-[10px]"
+                  >Free Delivery</span
+                >
+              </div>
+              <div
+                class="flex justify-between text-sm font-bold text-blue-600 pt-5 border-t border-slate-50 px-1"
+              >
+                <span>GST (18% Statutory)</span>
+                <span id="gstAmount">₹0.00</span>
+              </div>
+
+              <div
+                class="flex justify-between text-4xl font-black text-blue-900 pt-8 mt-6 border-t-2 border-slate-900"
+              >
+                <span class="tracking-tighter uppercase text-lg"
+                  >Total Payable</span
+                >
+                <span id="grandTotal">₹0.00</span>
+              </div>
             </div>
+
             <button
-              class="w-full bg-orange-500 text-white font-bold py-4 rounded-xl mt-8 hover:bg-orange-600 transition shadow-lg shadow-orange-200"
+              onclick="proceedToCheckout()"
+              class="group relative w-full bg-blue-900 text-white font-black py-7 rounded-[2rem] mt-10 hover:bg-orange-600 transition-all duration-500 shadow-2xl shadow-blue-200 uppercase tracking-[0.3em] text-[10px]"
             >
-              Proceed to Payment
+              <span class="relative z-10"
+                >Proceed to Checkout
+                <i
+                  class="fas fa-chevron-right ml-2 group-hover:translate-x-2 transition-transform"
+                ></i
+              ></span>
             </button>
+
+            <div
+              class="mt-8 flex items-center justify-center space-x-6 opacity-30 grayscale hover:grayscale-0 transition-all duration-500"
+            >
+              <i class="fab fa-cc-visa text-2xl"></i>
+              <i class="fab fa-cc-mastercard text-2xl"></i>
+              <i class="fas fa-shield-alt text-xl"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -74,51 +182,102 @@
       function renderFullCart() {
         const cart = JSON.parse(localStorage.getItem("mishra_cart")) || [];
         const container = document.getElementById("fullCartList");
-        const subtotalEl = document.getElementById("subtotal");
-        const totalEl = document.getElementById("grandTotal");
+        const itemCountDisplay = document.getElementById("itemCountDisplay");
+
+        itemCountDisplay.innerText = `${cart.length} Items`;
 
         if (cart.length === 0) {
           container.innerHTML = `
-                    <div class="text-center py-20">
-                        <i class="fas fa-shopping-cart text-5xl text-gray-200 mb-4"></i>
-                        <p class="text-gray-400">Your cart is currently empty.</p>
-                    </div>`;
+            <div class="bg-white rounded-[4rem] p-24 text-center border-2 border-dashed border-slate-200 animate__animated animate__fadeIn">
+              <div class="w-32 h-32 bg-slate-50 rounded-full flex items-center justify-center mx-auto mb-8">
+                <i class="fas fa-cart-arrow-down text-4xl text-slate-300"></i>
+              </div>
+              <h3 class="text-2xl font-black text-blue-900 uppercase mb-2">Cart is Empty</h3>
+              <p class="text-slate-400 font-medium mb-10">You haven't added any electrical solutions yet.</p>
+              <button onclick="location.href='shop.html'" class="bg-orange-500 text-white px-10 py-5 rounded-2xl font-black text-[10px] uppercase tracking-widest hover:scale-105 transition-all shadow-xl shadow-orange-200">Start Shopping</button>
+            </div>`;
+          updatePricing(0, 0);
           return;
         }
 
         let html = "";
-        let total = 0;
+        let rawOriginalTotal = 0;
+        let discountedTotal = 0;
 
         cart.forEach((item, index) => {
-          total += item.price * item.quantity;
+          const itemOriginal =
+            (item.originalPrice || item.price) * item.quantity;
+          const itemDiscounted = item.price * item.quantity;
+
+          rawOriginalTotal += itemOriginal;
+          discountedTotal += itemDiscounted;
+
+          // Optimized logic for Base64 and local paths
+          const imageSrc = item.image || "./images/logo.jpeg";
+
           html += `
-                <div class="flex items-center justify-between border-b last:border-0 pb-6 mb-6 last:mb-0">
-                    <div class="flex items-center space-x-4">
-                        <div class="h-20 w-20 bg-gray-100 rounded-lg flex items-center justify-center">
-                            <i class="fas fa-bolt text-blue-900 text-2xl"></i>
-                        </div>
-                        <div>
-                            <h4 class="font-bold text-gray-800">${item.name}</h4>
-                            <p class="text-sm text-gray-400">Industrial Grade</p>
-                        </div>
-                    </div>
-                    <div class="flex items-center space-x-10">
-                        <div class="flex items-center bg-gray-100 rounded-lg p-1">
-                            <button onclick="updateQty('${item.name}', -1)" class="px-3 py-1 hover:bg-white rounded shadow-sm transition">-</button>
-                            <span class="px-4 font-bold">${item.quantity}</span>
-                            <button onclick="updateQty('${item.name}', 1)" class="px-3 py-1 hover:bg-white rounded shadow-sm transition">+</button>
-                        </div>
-                        <span class="font-bold text-lg w-24 text-right">₹${(item.price * item.quantity).toLocaleString()}</span>
-                        <button onclick="removeItem('${item.name}')" class="text-gray-300 hover:text-red-500 transition">
-                            <i class="fas fa-trash"></i>
-                        </button>
-                    </div>
-                </div>`;
+            <div class="group bg-white rounded-[2.5rem] p-8 border border-slate-100 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-500 flex flex-col md:flex-row items-center justify-between animate__animated animate__fadeInUp" style="animation-delay: ${index * 0.1}s">
+              <div class="flex items-center space-x-8 w-full md:w-auto">
+                <div class="h-28 w-28 bg-slate-50 rounded-[2rem] overflow-hidden p-4 flex items-center justify-center border border-slate-100 group-hover:bg-white transition-colors">
+                  <img src="${imageSrc}" onerror="this.src='./images/logo.jpeg'" class="h-full w-full object-contain group-hover:scale-110 transition-transform duration-700">
+                </div>
+                <div>
+                  <div class="flex items-center space-x-2 mb-1">
+                    <span class="bg-blue-50 text-blue-600 text-[8px] font-black px-2 py-0.5 rounded-full uppercase">Industrial</span>
+                    <span class="bg-orange-50 text-orange-600 text-[8px] font-black px-2 py-0.5 rounded-full uppercase tracking-tighter">ISI Certified</span>
+                  </div>
+                  <h4 class="font-black text-blue-900 text-2xl tracking-tighter mb-1">${item.name}</h4>
+                  <p class="text-xs font-black text-slate-300 uppercase tracking-widest">Rate: ₹${item.price.toLocaleString()}</p>
+                </div>
+              </div>
+              
+              <div class="flex items-center justify-between w-full md:w-auto mt-8 md:mt-0 space-x-12">
+                <div class="flex items-center bg-slate-100 rounded-2xl p-2 border border-slate-200 shadow-inner">
+                  <button onclick="updateQty('${item.name}', -1)" class="w-12 h-12 hover:bg-white rounded-xl transition-all font-black text-blue-900 shadow-sm active:scale-90">-</button>
+                  <span class="px-8 font-black text-blue-900 text-lg">${item.quantity}</span>
+                  <button onclick="updateQty('${item.name}', 1)" class="w-12 h-12 hover:bg-white rounded-xl transition-all font-black text-blue-900 shadow-sm active:scale-90">+</button>
+                </div>
+                
+                <div class="text-right min-w-[120px]">
+                  <p class="text-[10px] text-slate-300 font-bold line-through mb-1">₹${itemOriginal.toLocaleString()}</p>
+                  <p class="font-black text-2xl text-blue-900 tracking-tighter">₹${itemDiscounted.toLocaleString()}</p>
+                </div>
+
+                <button onclick="removeItem('${item.name}')" class="w-14 h-14 text-slate-300 hover:text-red-500 hover:bg-red-50 rounded-2xl transition-all duration-500">
+                  <i class="fas fa-trash-alt text-lg"></i>
+                </button>
+              </div>
+            </div>`;
         });
 
         container.innerHTML = html;
-        subtotalEl.innerText = "₹" + total.toLocaleString();
-        totalEl.innerText = "₹" + total.toLocaleString();
+        updatePricing(rawOriginalTotal, discountedTotal);
+      }
+
+      function updatePricing(original, discounted) {
+        const gstRate = 0.18;
+        const gstAmount = Math.round(discounted * gstRate);
+        const finalTotal = discounted + gstAmount;
+
+        document.getElementById("originalValue").innerText =
+          `₹${original.toLocaleString()}`;
+        document.getElementById("discountValue").innerText =
+          `-₹${(original - discounted).toLocaleString()}`;
+        document.getElementById("subtotal").innerText =
+          `₹${discounted.toLocaleString()}`;
+        document.getElementById("gstAmount").innerText =
+          `₹${gstAmount.toLocaleString()}`;
+        document.getElementById("grandTotal").innerText =
+          `₹${finalTotal.toLocaleString()}`;
+
+        localStorage.setItem(
+          "mishra_bill_summary",
+          JSON.stringify({
+            subtotal: discounted,
+            gst: gstAmount,
+            total: finalTotal,
+          }),
+        );
       }
 
       function updateQty(name, delta) {
@@ -139,6 +298,17 @@
         cart = cart.filter((i) => i.name !== name);
         localStorage.setItem("mishra_cart", JSON.stringify(cart));
         renderFullCart();
+      }
+
+      function proceedToCheckout() {
+        const cart = JSON.parse(localStorage.getItem("mishra_cart")) || [];
+        if (cart.length === 0) return alert("Your basket is empty!");
+
+        // Add a smooth transition effect before leaving
+        document.body.classList.add("animate__animated", "animate__fadeOut");
+        setTimeout(() => {
+          location.href = "checkout.html";
+        }, 500);
       }
 
       document.addEventListener("DOMContentLoaded", renderFullCart);
